fixed contrast on links (a bit)

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -66,7 +66,7 @@ li.headerentry {
     text-align: center;
 }
 a.headerlink {
-    color: #d47257;
+    color: #be4f31;
     text-decoration: none;
 }
 div.userinfo {
@@ -97,7 +97,7 @@ div.footerinfo {
     display: inline-block;
 }
 a.footerlink {
-    color: #d47257;
+    color: #be4f31;
     text-decoration: none;
 }
 div.footerspacer {
