--- a/static/css/site.css
+++ b/static/css/site.css
@@ -16,7 +16,7 @@ div.hdl1 {
 }
 
 a.link {
-    color: #d47257;
+    color: #a5452b;
     --text-decoration: none;
 }
 
